--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./:/home/node/app
     working_dir: /home/node/app
-    command: ["node", "ace", "serve", "--watch"]
+    command: "node -r tsconfig-paths/register ace serve --watch"
     environment:
       - HOST=0.0.0.0
       - PORT=3333
