--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.6",
+    "@adonisjs/eslint-config": "^2.0.0",
+    "@adonisjs/prettier-config": "^1.4.4",
+    "@adonisjs/tsconfig": "^1.4.0",
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
-    "@symfony/webpack-encore": "^4.1.1",
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
@@ -33,6 +35,8 @@
     "@adonisjs/view": "^6.2.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.2.2",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tsconfig-paths": "^4.2.0",
+    "web3": "^4.16.0"
   }
 }
